[package]
name = "store_balances"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
rust_decimal = "1.33.1"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-console = "0.1"